@@ -22,7 +22,7 @@ public class MathSciNetId implements Identifier {
 
     public static Optional<MathSciNetId> parse(String mrNumberRaw) {
         // Take everything before whitespace or open bracket, so something like `619693 (82j:58046)` gets parsed correctly
-        String identifier = StringUtil.tokenizeToList(mrNumberRaw, " (").get(0).trim();
+        String identifier = StringUtil.tokenizeToList(mrNumberRaw, " (").getFirst().trim();
         return Optional.of(new MathSciNetId(identifier));
     }
 
